I made some adjustment to index.html

--- a/index.html
+++ b/index.html
@@ -62,23 +62,47 @@
                 <li>🗣️ English: TOEIC Certified -- Writing: C1, Listening: B2, Speaking: B1, Reading: B1</li>
                 <li>🗣️ Currently Learning: Romanian, French, Spanish</li>
             </ul>
-            <p>Actively expanding my language skills to support international collaboration, relocation goals, and meaningful personal connections.</p>
+            <p><strong>Additional Notes:</strong></p>  <!-- This is the key smooth transition -->
+            <ul>
+                <li>Actively expanding my language skills to support international collaboration, relocation goals, and meaningful personal connections.</li>
+                <li>Adaptable and comfortable working across diverse environments and time zones.</li>
+            </ul>
         </section>
 
+        <!-- Immediate Contribution Section -->
         <section class="immediate-contribution-section">
             <h2>🚀 Immediate Contributions: Roles I Can Fill Right Now</h2>
             <p>While cybersecurity is my primary focus, I am fully ready and motivated to contribute immediately in a variety of roles where I can deliver results from day one. I bring practical skills, real-world learning, and hands-on problem-solving experience that make me adaptable and reliable across different environments. I am dedicated to bringing my best to any role I take on, while also continuing to develop my cybersecurity expertise for long-term growth.</p>
+
+            <!-- Mini Section: IT & Technical Communication -->
+            <h3>💻 IT Support & Technical Communication</h3>
             <ul>
-                <li><strong>Software Development:</strong> Front-end web development using HTML, CSS, and practical project work—this website is my showcase.</li>
-                <li><strong>IT Support:</strong> Diagnosing and resolving technical issues efficiently.</li>
-                <li><strong>Technical Sales:</strong> Communicating technical solutions with clarity and confidence.</li>
-                <li><strong>Customer Service & Call Center:</strong> Providing excellent service with technical understanding.</li>
-                <li><strong>Social Media Marketing:</strong> Supporting content strategies, Facebook Ad Manager, SEO, A/B testing, and ROI tracking.</li>
+                <li><strong>IT Support:</strong> Diagnosing and resolving technical issues efficiently. See more in <a href="cyberlab.html">Hexterika Cyberlab</a>.</li>
+                <li><strong>Technical Sales:</strong> Communicating technical solutions with clarity and confidence, leveraging IT knowledge, English proficiency, and client-centered soft skills.</li>
+            </ul>
+
+            <!-- Mini Section: Customer-Facing Communication -->
+            <h3>🎧 Customer Support & Communication</h3>
+            <ul>
+                <li><strong>Customer Service & Call Center:</strong> Providing excellent service with technical understanding, strong communication, and fast problem-solving across time zones.</li>
+            </ul>
+
+            <!-- Mini Section: Software, Media, and Creative Roles -->
+            <h3>🖥️ Software, Media, and Creative Roles</h3>
+            <ul>
+                <li><strong>Software Development:</strong> Front-end web development using HTML, CSS, and JavaScript—this website is my showcase project.</li>
+                <li><strong>Social Media Marketing:</strong> Supporting content strategies, Meta Ads Manager (Facebook Ad Manager), SEO, A/B testing, and ROI tracking.</li>
                 <li><strong>Content Creator:</strong> Creating and editing visuals and videos for digital platforms.</li>
                 <li><strong>Video & Image Editor:</strong> Supporting visual content creation using Kdenlive, CapCut, GIMP, and Canva.</li>
-                <li><strong>MMA & Sport-Related Roles:</strong> Leveraging knowledge in sports science, coaching, and martial arts.</li>
-                <li><strong>Scuba Diving-Related Roles:</strong> Applying skills and certifications for diving-related opportunities.</li>
             </ul>
+
+            <!-- Mini Section: Sports & Specialized Roles -->
+            <h3>🏃‍♂️ Sports & Specialized Roles</h3>
+            <ul>
+                <li><strong>MMA & Sport-Related Roles:</strong> Leveraging knowledge in sports science, coaching, martial arts, and multi-sport background. Proof available via my dedicated MMA Instagram account.</li>
+                <li><strong>Scuba Diving-Related Roles:</strong> Applying skills and certifications including PADI Advanced Open Water Diver and PADI Enriched Air Diver (Nitrox).</li>
+            </ul>
+
             <p>These roles are not just side skills—they are areas where I can confidently deliver results right now. For a deeper look into the specific tools, creative abilities, and additional skills I bring to these positions, you can explore my Complementary Skills page below.</p>
             <a href="complementary-skills.html" class="button-cta">👉 See My Complementary Skills</a>
         </section>
