Making changes to the layout on cyberlab.html

--- a/cyberlab.html
+++ b/cyberlab.html
@@ -25,7 +25,23 @@
 
     <!-- Main Content (Grid Layout) -->
     <main>
-
+        <!--To be changed-->
+        <!--<section>
+    <h2>🎯 My Primary Focus: Aspiring Cybersecurity Specialist</h2>
+    <p>I am actively building my cybersecurity career, focusing on vulnerability assessment, penetration testing, and digital defense. My work is backed by hands-on learning, real-world projects, and certifications including:</p>
+    <ul>
+        <li>✅ CompTIA Security+ (2024 - 2027)</li>
+        <li>✅ ISC2 Certified in Cybersecurity (CC)</li>
+    </ul>
+    <p>Current Projects:</p>
+    <ul>
+        <li>🛡️ Active Directory Security Lab</li>
+        <li>☁️ AWS IAM Security Lab</li>
+        <li>🏅 TryHackMe - Top 3% Global Ranking</li>
+    </ul>
+    <a href="cyberlab.html" class="button-cta">👉 Explore Hexterika CyberLab</a>
+</section>
+-->
         <!--Introduction-->
         <section class="bg-1">
             <h1>Hexterika Cyberlab</h1>
