Make changes to index.html welcome section

--- a/index.html
+++ b/index.html
@@ -32,13 +32,18 @@
             <h1>Welcome to Hexterika Breaks Free</h1>
             <img src="assets/images/hexterika-breaks-free/myProfessionalHeadshot1.jpg" alt="Professional Headshot of Sangsongthong" class="headshot"/>
             <h2>Cybersecurity Specialist in Progress | Versatile IT Professional | Multi-Track Explorer</h2>
-            <p class="subtitle">Bringing foundational cybersecurity expertise and multi-track skills to immediate opportunities.</p>
-            <p class="intro-text">Hi, I'm Sangsongthong Chantarathai. Hexterika Breaks Free is not just my personal portfolio—it's also the front door to my freelancing services through Hexterika Cyberlab. This site showcases my cybersecurity work, versatile IT skills, and creative projects across tech, design, and sports. Whether you're here to explore, connect, or collaborate, you're in the right place.</p>
+            <p class="subtitle">Bridging cybersecurity foundations with a range of creative and technical disciplines.</p>
+            <p class="intro-text">
+               I'm Sangsongthong Chantaranothai (my legal name). This site is built with two clear purposes: to serve as my professional portfolio and to present Hexterika as a freelance brand. Whether you're here to explore my background for a job opportunity or to understand the services I offer, everything is structured to get you where you need to go without unnecessary distractions.
+            </p>
+            <p class="intro-text">
+                Hexterika is the name of the brand. Hexterika Cyberlab is its specialization in IT and cybersecurity — my core focus. Everything else lives under Hexterika Break Free.
+            </p>
         </section>
 
         <!--Primary Focus-->
         <section>
-            <h2>🚀 Hexterika Cyberlab: My Primary Focus</h2>
+            <h2>🚀 Hexterika Cyberlab: My Core Focus</h2>
             <p>Step into my cybersecurity playground—where I build, break, and explore. Inside, you'll find hands-on labs, real-world projects, a mock pentest report, and my certifications, including the globally recognized CompTIA Security+.</p>
             <!--Optional: Adding a tiny CompTIA logo on the side to visually enhance the section, but not now. Now, only the barebone version is needed.-->
             <a href="cyberlab.html" class="button-cta">👉 Explore Hexterika CyberLab</a>
@@ -67,6 +72,11 @@
                 <li>Actively expanding my language skills to support international collaboration, relocation goals, and meaningful personal connections.</li>
                 <li>Adaptable and comfortable working across diverse environments and time zones.</li>
             </ul>
+        </section>
+
+        <section>
+            <h2>My Aproach To Work</h2>
+            <p>While my core focus has been in IT and cybersecurity, I've also pursued roles outside those lanes—like sales, content creation, and other areas that align with my broader skill set. I approach every opportunity with curiosity, adaptability, and the same level of drive. This isn't just about finding work—it's about building a future that reflects my range, resilience, and capacity to contribute in multiple ways.</p>
         </section>
 
         <!-- Immediate Contribution Section -->
