Make changes to index.html welcome section again

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
         <section>
             <h1>Welcome to Hexterika Breaks Free</h1>
             <img src="assets/images/hexterika-breaks-free/myProfessionalHeadshot1.jpg" alt="Professional Headshot of Sangsongthong" class="headshot"/>
-            <h2>Cybersecurity Specialist in Progress | Versatile IT Professional | Multi-Track Explorer</h2>
-            <p class="subtitle">Bridging cybersecurity foundations with a range of creative and technical disciplines.</p>
+            <h2>Versatile IT Professional With Cybersecurity Specialization | Multi-Track Explorer</h2>
+            <p class="subtitle">Forging Paths Where Cybersecurity, Tech, and Creativity Intersect.</p>
             <p class="intro-text">
-               I'm Sangsongthong Chantaranothai (my legal name). This site is built with two clear purposes: to serve as my professional portfolio and to present Hexterika as a freelance brand. Whether you're here to explore my background for a job opportunity or to understand the services I offer, everything is structured to get you where you need to go without unnecessary distractions.
+               I'm Sangsongthong Chantaranothai (my legal name). This site is built with two clear purposes: to serve as my professional portfolio and to present Hexterika as a freelance brand. Whether you're here because I applied for a role with your company or you're exploring the services I provide, this site is designed to guide you directly to what you need—no fluff, no distractions.
             </p>
             <p class="intro-text">
                 Hexterika is the name of the brand. Hexterika Cyberlab is its specialization in IT and cybersecurity — my core focus. Everything else lives under Hexterika Break Free.
