Fixed contact.html. Make changes to the index.html to make it more impactful.

--- a/contact.html
+++ b/contact.html
@@ -27,56 +27,55 @@
     <!-- Main Content (Grid Layout) -->
     <main>
 
-        <!--Hero-->
+        <!-- Hero -->
         <section class="hero">
             <h1>Get In Touch</h1>
-            <p>I'm always eager to connect with fellow professionals, discuss new challenges, and explore opportunities. Please feel free to reach out via your preferred method below.</p>
+            <p>I'm always open to connecting — whether it's for job opportunities, freelance work, or tech conversations. Use whichever method works best for you.</p>
         </section>
 
-        <!--Job Opportunities-->
+        <!-- Job Opportunities -->
         <section class="job">
-            <h2>For Job Opportunities:</h2>
-            <p>For direct inquiries, networking, or to view my projects, here are the best ways to reach me:</p>
+            <h2>💼 For Job Opportunities</h2>
             <ul>
                 <li>
-                    <a href="mailto:gexterlife.personal@gmail.com" class="button-cta">Email Me Directly</a>
-                    <p><strong>Best for:</strong> Professional inquiries, collaboration proposals, or specific questions about my experience.</p>
+                    <a href="mailto:gexterlife.personal@gmail.com" class="button-cta">Email Me</a>
+                    <p><strong>Use this for:</strong> Hiring inquiries, networking, or anything related to my CV and experience.</p>
                 </li>
                 <li>
                     <a href="https://www.linkedin.com/in/sangsongthong-chantaranothai/" target="_blank" rel="noopener noreferrer" class="button-cta">Connect on LinkedIn</a>
-                    <p><strong>Best for:</strong> Professional networking, direct messages regarding job opportunities, or industry discussions.</p>
+                    <p><strong>Use this for:</strong> Quick outreach, professional connections, or collaborative discussions.</p>
                 </li>
                 <li>
-                    <a href="https://github.com/sangsongthong-hexterika" target="_blank" rel="noopener noreferrer" class="button-cta">Explore My GitHub</a>
-                    <p><strong>Best for:</strong> Reviewing my code repositories, project write-ups, and cybersecurity lab documentation.</p>
+                    <a href="https://github.com/sangsongthong-hexterika" target="_blank" rel="noopener noreferrer" class="button-cta">View My GitHub</a>
+                    <p><strong>Use this for:</strong> Reviewing projects, code samples, or cybersecurity documentation.</p>
                 </li>
             </ul>
         </section>
 
-        <!--Freelance Services-->
+        <!-- Freelance Services -->
         <section class="freelance">
-            <h2>For Freelance Services:</h2>
+            <h2>🛠️ For Freelance Projects</h2>
             <ul>
                 <li>
-                    <a href="mailto:hexterika.contact@hexterika-breaks-free.website" class="button-cta">General Freelancing Services</a>
-                    <p><strong>Best for:</strong> General freelance inquiries, project quotes, or initial contact for service discussions.</p>
+                    <a href="mailto:hexterika.contact@hexterika-breaks-free.website" class="button-cta">General Freelance Inquiries</a>
+                    <p><strong>Use this for:</strong> Project quotes, availability, or partnership discussions.</p>
                 </li>
                 <li>
-                    <a href="mailto:hexterika.cyberlab@hexterika-breaks-free.website" class="button-cta">IT & Cybersecurity Service</a>
-                    <p><strong>Best for:</strong> Inquiries related to cybersecurity projects, consultations, vulnerability assessments, or penetration testing.</p>
+                    <a href="mailto:hexterika.cyberlab@hexterika-breaks-free.website" class="button-cta">Cybersecurity Projects</a>
+                    <p><strong>Use this for:</strong> Security audits, consultations, penetration testing, or vulnerability assessments.</p>
                 </li>
                 <li>
-                    <a href="mailto:hexterika.designer@hexterika-breaks-free.website" class="button-cta">UX/UI Design Service</a>
-                    <p><strong>Best for:</strong> Design-specific project requests, UI/UX consultations, or graphic design work.</p>
+                    <a href="mailto:hexterika.designer@hexterika-breaks-free.website" class="button-cta">Design & UI/UX Work</a>
+                    <p><strong>Use this for:</strong> Visual design projects, UI reviews, or anything creative and user-centered.</p>
                 </li>
             </ul>
+        </section>
 
-        </section>
-        
-        <!--Closing End-->
+        <!-- Response Time -->
         <section class="closing-end">
-            <p class="response-note">I strive to respond to all professional inquiries within 24-48 business hours.</p>
+            <p class="response-note">📩 I typically respond within 24–48 business hours.</p>
         </section>
+
     </main>
 
     <!-- Footer Section -->
