--- a/index.html
+++ b/index.html
@@ -51,26 +51,20 @@
 
         <!--Priority Clarification Section-->
         <section class="priorities-section">
-            <h2>🌍 My Immediate Priorities</h2>
-            <p>I am immediately available for fully remote positions worldwide. I work comfortably across time zones and am ready to contribute from day one.</p>
-            <p><strong>My Relocation Priorities:</strong></p>
-            <ol>
-                <li><strong>Immediate Focus:</strong> Secure a remote position quickly.</li>
-                <li><strong>Primary Relocation Goal:</strong> Romania -- Deep personal motivation, currently learning Romanian, actively researching non-EU relocation pathways.</li>
-                <li><strong>Open to:</strong> North America (USA & Canada) -- Prior personal connections and strong market alignment.</li>
-                <li><strong>Interested In:</strong> UK and broader Europe -- To gain international IT and cybersecurity experience.</li>
-            </ol>
-            <p>I am familiar with core relocation processes and ready to take the necessary steps to relocate quickly. My passport is valid for more than six months, which meets standard international requirements and allows me to act without delays when opportunities arise.</p>
-            <p><strong>Language Proficiency:</strong></p>
+            <h2>🌍 Immediate Priorities</h2>
             <ul>
-                <li>🗣️ Thai: Native</li>
-                <li>🗣️ English: TOEIC Certified -- Writing: C1, Listening: B2, Speaking: B1, Reading: B1</li>
-                <li>🗣️ Currently Learning: Romanian, French, Spanish</li>
+                <li>Immediately available for full-time remote roles.</li>
+                <li>Able to work across time zones as required.</li>
+                <li>Actively preparing for international relocation.</li>
+                <li>Ready to begin remotely and transition through employment or visa pathways (including digital nomad options).</li>
+                <li>Familiar with relocation processes; passport is valid and ready for international use.</li>
+                <li>Open to opportunities across North America, Europe, and other regions aligned with long-term career growth.</li>
             </ul>
-            <p><strong>Additional Notes:</strong></p>  <!-- This is the key smooth transition -->
+            <h3>Langauges Proficiency</h3>
             <ul>
-                <li>Actively expanding my language skills to support international collaboration, relocation goals, and meaningful personal connections.</li>
-                <li>Adaptable and comfortable working across diverse environments and time zones.</li>
+                <li>🗣️ English: TOEIC Certified -- Writing: C1, Listening: B2, Speaking: B1, Reading: B1</li>
+                <li><strong>Currently Learning: </strong>Romanian, Spanish, French</li>
+                <li>Thai: Native</li>
             </ul>
         </section>
 
@@ -79,50 +73,15 @@
             <p>While my core focus has been in IT and cybersecurity, I've also pursued roles outside those lanes—like sales, content creation, and other areas that align with my broader skill set. I approach every opportunity with curiosity, adaptability, and the same level of drive. This isn't just about finding work—it's about building a future that reflects my range, resilience, and capacity to contribute in multiple ways.</p>
         </section>
 
-        <!-- Immediate Contribution Section -->
-        <section class="immediate-contribution-section">
-            <h2>🚀 Immediate Contributions: Roles I Can Fill Right Now</h2>
-            <p>While cybersecurity is my primary focus, I am fully ready and motivated to contribute immediately in a variety of roles where I can deliver results from day one. I bring practical skills, real-world learning, and hands-on problem-solving experience that make me adaptable and reliable across different environments. I am dedicated to bringing my best to any role I take on, while also continuing to develop my cybersecurity expertise for long-term growth.</p>
-
-            <!-- Mini Section: IT & Technical Communication -->
-            <h3>💻 IT Support & Technical Communication</h3>
-            <ul>
-                <li><strong>IT Support:</strong> Diagnosing and resolving technical issues efficiently. See more in <a href="cyberlab.html">Hexterika Cyberlab</a>.</li>
-                <li><strong>Technical Sales:</strong> Communicating technical solutions with clarity and confidence, leveraging IT knowledge, English proficiency, and client-centered soft skills.</li>
-            </ul>
-
-            <!-- Mini Section: Customer-Facing Communication -->
-            <h3>🎧 Customer Support & Communication</h3>
-            <ul>
-                <li><strong>Customer Service & Call Center:</strong> Providing excellent service with technical understanding, strong communication, and fast problem-solving across time zones.</li>
-            </ul>
-
-            <!-- Mini Section: Software, Media, and Creative Roles -->
-            <h3>🖥️ Software, Media, and Creative Roles</h3>
-            <ul>
-                <li><strong>Software Development:</strong> Front-end web development using HTML, CSS, and JavaScript—this website is my showcase project.</li>
-                <li><strong>Social Media Marketing:</strong> Supporting content strategies, Meta Ads Manager (Facebook Ad Manager), SEO, A/B testing, and ROI tracking.</li>
-                <li><strong>Content Creator:</strong> Creating and editing visuals and videos for digital platforms.</li>
-                <li><strong>Video & Image Editor:</strong> Supporting visual content creation using Kdenlive, CapCut, GIMP, and Canva.</li>
-            </ul>
-
-            <!-- Mini Section: Sports & Specialized Roles -->
-            <h3>🏃‍♂️ Sports & Specialized Roles</h3>
-            <ul>
-                <li><strong>MMA & Sport-Related Roles:</strong> Leveraging knowledge in sports science, coaching, martial arts, and multi-sport background. Proof available via my dedicated MMA Instagram account.</li>
-                <li><strong>Scuba Diving-Related Roles:</strong> Applying skills and certifications including PADI Advanced Open Water Diver and PADI Enriched Air Diver (Nitrox).</li>
-            </ul>
-
-            <p>These roles are not just side skills—they are areas where I can confidently deliver results right now. For a deeper look into the specific tools, creative abilities, and additional skills I bring to these positions, you can explore my Complementary Skills page below.</p>
-            <a href="complementary-skills.html" class="button-cta">👉 See My Complementary Skills</a>
-        </section>
-
-        <!--Next Steps-->
-        <section class="next-steps-section">
-            <h2>👉 Let's Connect & Explore</h2>
-            <ul>
-                <li><a href="about.html" class="button-cta">View Professional Profile</a></li>
-                <li><a href="contact.html" class="button-cta">Connect With Me</a></li>
+        <!--Where To Go Section-->
+        <section class="where-to-go">
+            <h2>👀 Where To Go From Here</h2>
+            <ul class="destination-card">
+                <li>💻 <strong>If you're here regarding an IT or Cybersecurity role I applied for:</strong> 👉 See my portfolio in <a href="cyberlab.html">Hexterika Cyberlab</a>.</li>
+                <li>🎨 <strong>If you're here about a non-technical or client-facing role I applied for:</strong> 👉 See my portfolio in <a href="complementary-skills.html">Complementary Skills</a> page.</li>
+                <li>🧑‍💻 <strong>If you're here about a Software Development role I applied for:</strong> This site is one of my frontend projects. Also go to the <a href="complementary-skills.html">Complementary Skills</a> page.</li>
+                <li>🛠️ <strong>If you're here about a freelance project:</strong> Go to the <a href="services.html">Services</a> page.</li>
+                <li>📬 <strong>If you're here for general inquiries or hiring:</strong> Go to the <a href="contact.html">Contact</a> page.</li>
             </ul>
         </section>
     </main>
