Minor fixed words changes on index.html

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
         </section>
 
         <!--Where To Go Section-->
-        <section class="where-to-go">
-            <h2>👀 Where To Go From Here</h2>
+        <section class="where-to-go-next">
+            <h2>👀 Where To Go Next</h2>
             <ul class="destination-card">
                 <li>💻 <strong>If you're here regarding an IT or Cybersecurity role I applied for:</strong> 👉 See my portfolio in <a href="cyberlab.html">Hexterika Cyberlab</a>.</li>
                 <li>🎨 <strong>If you're here about a non-technical or client-facing role I applied for:</strong> 👉 See my portfolio in <a href="complementary-skills.html">Complementary Skills</a> page.</li>
