Change complementary skills.html to non-IT.html, change the link from in the index.html that used to point to complementary-skills.html to non-IT.html, and remove the disclaimer from the footer of index.html because the welcome section already made it clear.

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <ul class="destination-card">
                 <li>💻 <strong>If you're here regarding an IT or Cybersecurity role I applied for:</strong> 👉 See my portfolio in <a href="cyberlab.html">Hexterika Cyberlab</a>.</li>
                 <li>🎨 <strong>If you're here about a non-technical or client-facing role I applied for:</strong> 👉 See my portfolio in <a href="complementary-skills.html">Complementary Skills</a> page.</li>
-                <li>🧑‍💻 <strong>If you're here about a Software Development role I applied for:</strong> This site is one of my frontend projects. Also go to the <a href="complementary-skills.html">Complementary Skills</a> page.</li>
+                <li>🧑‍💻 <strong>If you're here about a Software Development role I applied for:</strong> This site is one of my frontend projects. Also go to the <a href="non-IT.html">Non-IT/Cybersecurity</a> page.</li>
                 <li>🛠️ <strong>If you're here about a freelance project:</strong> Go to the <a href="services.html">Services</a> page.</li>
                 <li>📬 <strong>If you're here for general inquiries or hiring:</strong> Go to the <a href="contact.html">Contact</a> page.</li>
             </ul>
@@ -89,9 +89,6 @@
     <!-- Footer Section -->
     <footer class="footer">
         <p><strong>&copy; 2025 Hexterika Breaks Free. All rights reserved.</strong></p>
-        <p class="disclaimer">
-            <em>Disclaimer:</em> Hexterika is a personal brand created and owned by Sangsongthong Chantarathai. It is not a legally registered business at this time. "Gexter" is a personal alias and not a legal name. This website operates under personal branding for professional and freelance purposes.
-        </p>
     </footer>
 </body>
 </html>
