Remove the disclaimer in the footer from non-IT.html and add a line sending Programming part to certs.html.

--- a/non-IT.html
+++ b/non-IT.html
@@ -42,6 +42,7 @@
                 <li>Self-taught Arduino programming to support a sports technology project, enabling timely project completion despite budget and outsourcing limitations</li>
                 <li>Self-taught through small practical projects and real-world experimentation</li>
             </ul>
+            <p>👉 See related certificates in <a>certs.html</a></p>
         </section>
 
         <!-- Sports & Leisure -->
@@ -124,9 +125,6 @@
     <!-- Footer Section -->
     <footer class="footer">
         <p><strong>&copy; 2025 Hexterika Breaks Free. All rights reserved.</strong></p>
-        <p class="disclaimer">
-            <em>Disclaimer:</em> Hexterika is a personal brand created and owned by Sangsongthong Chantarathai. It is not a legally registered business at this time. "Gexter" is a personal alias and not a legal name. This website operates under personal branding for professional and freelance purposes.
-        </p>
     </footer>
 </body>
 </html>
