Fixed Links in the nav bar on every page by replace designer.html with non-IT.html and the non-IT.html link on the index.html page.

--- a/non-IT.html
+++ b/non-IT.html
@@ -16,7 +16,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="cyberlab.html">Hexterika Cyberlab</a></li>
-                <li><a href="designer.html">Hexterika Designer</a></li>
+                <li><a href="non-IT.html">Non-IT/Cybersecurity</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="certs.html">Certificates</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -29,8 +29,8 @@
 
         <!-- Page Title -->
         <section class="page-title">
-            <h1>💼 Complementary Skills</h1>
-            <p>Here's a closer look at the practical, job-ready skills I bring to creative projects, cross-functional teams, and sports-related environments—skills I can contribute to immediately alongside my cybersecurity focus.</p>
+            <h1>💼 Non-IT / Cybersecurity Roles & Skills</h1>
+            <p>This page highlights the versatile skills and experience I offer outside of IT and cybersecurity. From client-facing roles and creative projects to hands-on sports experience and frontend development, these are roles I'm equipped to take on immediately—many of which are powered by real-world outcomes and self-driven learning.</p>
         </section>
 
         <!-- Programming (Web Basics) -->
