--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="cyberlab.html">Hexterika Cyberlab</a></li>
-                <li><a href="designer.html">Hexterika Designer</a></li>
+                <li><a href="non-IT.html">Non-IT/Cybersecurity</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="certs.html">Certificates</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -78,7 +78,7 @@
             <h2>👀 Where To Go Next</h2>
             <ul class="destination-card">
                 <li>💻 <strong>If you're here regarding an IT or Cybersecurity role I applied for:</strong> 👉 See my portfolio in <a href="cyberlab.html">Hexterika Cyberlab</a>.</li>
-                <li>🎨 <strong>If you're here about a non-technical or client-facing role I applied for:</strong> 👉 See my portfolio in <a href="complementary-skills.html">Complementary Skills</a> page.</li>
+                <li>🎨 <strong>If you're here about a non-technical or client-facing role I applied for:</strong> 👉 See my portfolio in <a href="non-IT.html">Non-IT/Cybersecurity</a> page.</li>
                 <li>🧑‍💻 <strong>If you're here about a Software Development role I applied for:</strong> This site is one of my frontend projects. Also go to the <a href="non-IT.html">Non-IT/Cybersecurity</a> page.</li>
                 <li>🛠️ <strong>If you're here about a freelance project:</strong> Go to the <a href="services.html">Services</a> page.</li>
                 <li>📬 <strong>If you're here for general inquiries or hiring:</strong> Go to the <a href="contact.html">Contact</a> page.</li>
