I forgot to type one line of name of one of the certs in <a>cert-name</a> so I typed it to make the format consistent.

--- a/certs.html
+++ b/certs.html
@@ -166,7 +166,7 @@
                 <li>
                     <div class="cert-social">
                         <p><strong>Meta on Coursera: Social Media Management</strong></p>
-                        <p><a href="https://coursera.org/share/e00e9e76cde0d105f1f937669ff29ff0" target="_blank" rel="noopener noreferrer"></a></p>
+                        <p><a href="https://coursera.org/share/e00e9e76cde0d105f1f937669ff29ff0" target="_blank" rel="noopener noreferrer">Meta on Coursera: Social Media Management</a></p>
                         <img src="assets/images/certs/Coursera_SocialMediaManagement.png" alt="Meta on Coursera: Social Media Management Certificate">
                     </div>
                 </li>
