Adding an old cert that I forgot to add or the AI at that time told me not to.

--- a/certs.html
+++ b/certs.html
@@ -173,6 +173,14 @@
 
                 <li>
                     <div class="cert-social">
+                        <p><strong>Meta on Coursera: Advertising With Meta</strong></p>
+                        <p><a href="https://coursera.org/share/1303a08de53423fb97176fa99ac02286" target="_blank" rel="noopener noreferrer">Meta on Coursera: Advertising With Meta</a></p>
+                        <img src="assets/images/certs/Coursera_AdvertisingWithMeta.png" alt="Meta on Coursera: Advertising With Meta">
+                    </div>
+                </li>
+
+                <li>
+                    <div class="cert-social">
                         <p><strong>Meta on Coursera: Measure And Optimize Social Media Marketing Campaigns</strong></p>
                         <p><a href="https://coursera.org/share/2f7682b604d2de1a24cc00870ae65e3d" target="_blank" rel="noopener noreferrer">Meta on Coursera: Measure And Optimize Social Media Marketing Campaigns</a></p>
                         <img src="assets/images/certs/Coursera_MeasureAndOptimizeSocialMediaMarketingCampaigns.png" alt="Meta on Coursera: Measure And Optimize Social Media Marketing Campaigns Certificate">
