Make cyberlab stronger and more SaaS but not yet done.

--- a/cyberlab.html
+++ b/cyberlab.html
@@ -45,12 +45,17 @@
         <!--Introduction-->
         <section class="bg-1">
             <h1>Hexterika Cyberlab</h1>
-            <p>Hexterika Cyberlab is my dedicated space to showcase <strong>practical work, skills, and continuous learning</strong> in cybersecurity and IT. Launched in <strong>February 2023</strong> alongside my initial steps into the cybersecurity field, this platform reflects my journey as a self-driven learner and an aspiring professional.</p>
-            <p>This portfolio emphasizes my <strong>IT and Cybersecurity skills</strong>, demonstrating my commitment to delivering real value in security-focused roles through hands-on experience and thorough documentation.</p>
+            <p>Hexterika Cyberlab is my hands-on space to showcase <strong>practical work, technical support experience, and SaaS platform readiness</strong>. Launched in February 2023, it reflects the skills I've already applied across real systems — solving problems, supporting users, and securing environments through action-driven projects. I'm ready to contribute in a support-focused role today, while continuing to build new skills that keep pace with evolving tools and threats.</p>
+            <br>
+            <!-- 🚀 STRATEGIC REMOTE PLACEMENT -->
+            <p>While my past work has been primarily on-site, I'm currently focused on building a fully remote career. I operate from Thailand with a reliable setup, strong internet, and a self-directed schedule aligned with U.S. and European time zones. This alignment supports both my productivity and personal privacy, and positions me to contribute seamlessly across global teams.</p>
+            <p>My independent work through Hexterika Cyberlab reflects this shift, where I've simulated client-facing SaaS support environments, documented technical workflows, and worked toward international standards. I'm ready for remote-first roles that value communication, adaptability, and technical depth — and I welcome relocation sponsorship for long-term opportunities that match my direction.</p>
+            <p>I'm proactively aligning my tools, time, and training to support users and teams across borders — not just remotely, but professionally and consistently.</p>
+</section>
         </section>
 
         <!--My journey-->
-        <h2>My Cybersecurity Journey</h2>
+        <h2>My Technical Journey: SaaS, Cybersecurity, and Support</h2>
             <p>I hold key cybersecurity certifications that validate my foundational knowledge and hands-on capabilities:</p>
             <ul>
                 <li><strong>CompTIA Security+</strong></li>
@@ -104,7 +109,7 @@
                 </section>
             </section>
 
-            <p>This section reflects my ongoing growth and commitment to deepening my cybersecurity expertise through applied learning, grounded in a strong, diverse IT background.</p>
+            <p>This section reflects my ongoing growth and commitment to deepening my cybersecurity expertise through applied learning, grounded in a strong, diverse IT background. <strong>At the same time</strong>, I am currently seeking remote SaaS support opportunities — where I can combine user-focused service, cross-platform troubleshooting, and cybersecurity awareness to enhance customer experience.</p>
         </section>
 
         <!--Skills & Tools-->
@@ -219,7 +224,8 @@
                 <li><a href="#">Lab: Windows Server & Basic Networking - Coming Soon</a></li>
             </ul>
         
-            <h3>☁️ Cloud Platforms: AWS IAM Security Lab (ongoing)</h3>
+            <h3>☁️ Cloud Platforms: AWS IAM Security Lab</h3>
+            <p>This project analyzes and documents identity misconfigurations in AWS IAM to simulate access issues common in SaaS environments — including permission errors, role escalation, and policy flaws. It reflects the type of real-world problems support teams help investigate and resolve securely, with a security-first mindset.</p>
             <ul>
                 <li><a href="https://github.com/sangsongthong-hexterika/AWS-IAM-Security" target="_blank" rel="noopener noreferrer">Lab: AWS IAM Security Lab</a></li>
             </ul>
