--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,8 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="cyberlab.html">Hexterika Cyberlab</a></li>
+                <li><a href="hexterika-cyberlab-portfolio.html">Hexterika Cyberlab Portfolio</a></li>
+                <li><a href="hexterika-cyberlab-services.html">Hexterika Cyberlab Services</a></li>
                 <li><a href="non-IT.html">Non-IT/Cybersecurity</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="certs.html">Certificates</a></li>
