Add Disclaimer section to Hexterika Cyberlan Services

--- a/hexterika-cyberlab-services.html
+++ b/hexterika-cyberlab-services.html
@@ -28,7 +28,9 @@
         <!--Overview Section-->
         <section>
             <h1>Hexterika Cyberlab Services</h1>
-            <p>Hexterika Cyberlab offers freelance cybersecurity consulting, technical support, and both remote and on-site tech services. Project-based work is available on Upwork or through direct inquiry. For one-on-one cybersecurity education, including sessions designed for kids and beginners, you can find me on Preply. This page serves as the official business front for my work under the Hexterika Cyberlab brand, operated by Sangsongthong.</p>
+            <p>Hexterica CyberLab is a freelance business offering cybersecurity consulting (including penetration testing), technical support, and remote digital services. While my local work focuses on IT and technical support, my online services are expanding into cybersecurity, web security assessments, and client-focused consulting.</p>
+            <p>This business operates as a sole proprietorship under the name Sangsongthong, serving both individuals and small businesses. Remote projects are accepted through platforms like Upwork or via direct inquiry through the <a href="contact.html">Contact</a> page., while cybersecurity education services are available on Preply.</p>
+            <p>The brand and its associated website are currently in a transitional phase, with the intention to scale from local freelancing into international cybersecurity and SaaS-related roles.</p>
             <ul>
                 <li>
                     <a href="https://www.upwork.com/freelancers/sangsongthong?s=1017484851352698966" target="_blank" rel="noopener noreferrer">Upwork: Information Security Specialized Profile</a>
@@ -48,6 +50,10 @@
             <ul>
                 <li><a href="https://github.com/sangsongthong-hexterika/MockPenetrationTestingReport" target="_blank" rel="noopener noreferrer">Sample Penetration Testing Report</a></li>
             </ul>
+        </section>
+        <section>
+            <h2>Disclaimer</h2>
+            <p>Hexterica Cyberlab is a hybrid professional platform that showcases my cybersecurity work both as a freelance consultant and as a portfolio for remote job applications. My current income comes primarily from local, on-site technical support services in Thailand, while I actively transition to international, remote roles—especially in SaaS environments. This site is part of that transition and reflects both my freelance offerings and my broader professional journey.</p>
         </section>
     </main>
 
